# i-NUIST-AutoLogin

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
src/: __init__.py  cli.py  client.py  config.py  crypto.py  utils.py
