[project]
name = "autologin"
version = "0.1.0"
description = "校园网自动登录工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pycryptodome>=3.23.0",
    "rich>=14.2.0",
    "toml>=0.10.2",
]

[project.scripts]
autologin = "src.cli:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
